--- a/WeatherApp/WeatherApp.csproj
+++ b/WeatherApp/WeatherApp.csproj
@@ -69,6 +69,14 @@
 		<PackageReference Include="SkiaSharp.Extended.UI.Maui" Version="2.0.0-preview.61" />
 		<PackageReference Include="SkiaSharp.NativeAssets.macOS" Version="2.88.7" />
 		<PackageReference Include="SkiaSharp" Version="2.88.7" />
+		<PackageReference Include="SkiaSharp.NativeAssets.Win32" Version="2.88.7" />
+		<PackageReference Include="Microsoft.Maui.Graphics.Skia" Version="8.0.7" />
+		<PackageReference Include="Fody" Version="6.8.0">
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		  <PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+		<PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
+		<PackageReference Include="ConfigureAwait.Fody" Version="3.3.2" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -89,12 +97,14 @@
 	  <None Remove="Resources\Raw\sunny.json" />
 	  <None Remove="Resources\Raw\thunder.json" />
 	  <None Remove="Resources\Raw\windy.json" />
+	  <None Remove="Converters\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="MVVM\" />
 	  <Folder Include="MVVM\Model\" />
 	  <Folder Include="MVVM\ViewModel\" />
 	  <Folder Include="MVVM\Views\" />
+	  <Folder Include="Converters\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <BundleResource Include="Resources\Fonts\Rufina-Bold.ttf" />
@@ -110,5 +120,8 @@
 	  <BundleResource Include="Resources\Raw\sunny.json" />
 	  <BundleResource Include="Resources\Raw\thunder.json" />
 	  <BundleResource Include="Resources\Raw\windy.json" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0-android'">
+	  <PackageReference Include="SkiaSharp.NativeAssets.Android" Version="2.88.7" />
 	</ItemGroup>
 </Project>
