--- a/WeatherApp/Platforms/Android/AndroidManifest.xml
+++ b/WeatherApp/Platforms/Android/AndroidManifest.xml
@@ -14,6 +14,7 @@
 	<uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 	<uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
 	<uses-permission android:name="android.permission.IMAGE_CAPTURE" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 	<queries>
 		<intent>
