--- a/WeatherApp/Platforms/Android/AndroidManifest.xml
+++ b/WeatherApp/Platforms/Android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true">
-		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBf-H1WAr5OABKNhSCgCnOYITPiS9k99Vc"/>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.companyname.weatherapp" android:versionCode="1" android:versionName="1.0">
+	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:supportsRtl="true" android:label="WeatherApp">
+		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBf-H1WAr5OABKNhSCgCnOYITPiS9k99Vc" />
 	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
@@ -13,12 +13,15 @@
 	<uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
 	<uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 	<uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
-	<uses-permission android:name="android.permission.IMAGE_CAPTURE" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+	<uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 	<queries>
 		<intent>
-			<action android:name="android.media.action.IMAGE_CAPTURE"/>
+			<action android:name="android.media.action.IMAGE_CAPTURE" />
 		</intent>
 	</queries>
+	<uses-sdk />
 </manifest>
